--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -1026,6 +1026,9 @@
                                 <state key="normal" title="Save">
                                     <color key="titleColor" red="0.86178725406220547" green="0.95607708038538586" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnSave:" destination="Zxe-3X-juf" eventType="touchUpInside" id="sXq-Sc-7t4"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add" translatesAutoresizingMaskIntoConstraints="NO" id="4rt-O7-kft">
                                 <rect key="frame" x="20" y="118" width="560" height="360"/>
@@ -1051,15 +1054,13 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Photos" image="bar_photo" id="tR8-kg-wB3"/>
                     <connections>
-                        <outlet property="btnPick" destination="HOn-Om-DZC" id="xVR-Zw-C3Q"/>
-                        <outlet property="btnSave" destination="HOn-Om-DZC" id="56Y-4G-3fo"/>
                         <outlet property="imageView" destination="4rt-O7-kft" id="3zj-mc-X6q"/>
                         <outlet property="txtPhotoTitle" destination="vLa-Zq-qa3" id="5EM-jk-oQY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUU-NE-xQK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-554" y="520"/>
+            <point key="canvasLocation" x="-778" y="467"/>
         </scene>
     </scenes>
     <resources>
