--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -208,7 +208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USS-KK-48e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1378" y="589"/>
+            <point key="canvasLocation" x="-1423" y="519"/>
         </scene>
         <!--Photos-->
         <scene sceneID="hAg-WR-jT3">
@@ -257,26 +257,44 @@
                                     <constraint firstAttribute="bottom" secondItem="4UH-jO-YPd" secondAttribute="bottom" constant="8" id="g69-eG-7Kp"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="v8i-JK-TTA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="186" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="v8i-JK-TTA">
                                 <rect key="frame" x="0.0" y="60" width="600" height="491"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="IJC-MR-iMH" customClass="PhotosCell" customModule="Your_Valult" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="186" id="IJC-MR-iMH" customClass="PhotosCell" customModule="Your_Valult" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="186"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IJC-MR-iMH" id="cJU-LC-BB0">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="185.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffk-rC-B43">
-                                                    <rect key="frame" x="18" y="8" width="130" height="40"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eZX-EJ-fjP">
+                                                    <rect key="frame" x="16" y="19" width="172" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="kWp-wP-unN"/>
+                                                        <constraint firstAttribute="width" constant="172" id="n8D-Ne-BIo"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffk-rC-B43">
+                                                    <rect key="frame" x="221" y="63" width="339" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="339" id="BdF-Nj-KXZ"/>
+                                                        <constraint firstAttribute="height" constant="40" id="FLP-OQ-uN2"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ffk-rC-B43" firstAttribute="top" secondItem="cJU-LC-BB0" secondAttribute="topMargin" constant="55" id="WGI-vg-fIc"/>
+                                                <constraint firstItem="ffk-rC-B43" firstAttribute="leading" secondItem="eZX-EJ-fjP" secondAttribute="trailing" constant="33" id="cfy-7d-fud"/>
+                                                <constraint firstItem="eZX-EJ-fjP" firstAttribute="leading" secondItem="cJU-LC-BB0" secondAttribute="leadingMargin" constant="8" id="oEh-GN-SOw"/>
+                                                <constraint firstItem="eZX-EJ-fjP" firstAttribute="top" secondItem="cJU-LC-BB0" secondAttribute="topMargin" constant="11" id="tZU-cu-rkR"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imageChoosed" destination="eZX-EJ-fjP" id="f46-n1-3pd"/>
                                             <outlet property="label" destination="ffk-rC-B43" id="JvC-5q-ZqU"/>
                                         </connections>
                                     </tableViewCell>
@@ -305,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GiH-gI-BTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1273" y="575"/>
+            <point key="canvasLocation" x="-777" y="486"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ooR-pJ-4Jv">
@@ -1060,7 +1078,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUU-NE-xQK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-778" y="467"/>
+            <point key="canvasLocation" x="-81" y="467"/>
         </scene>
     </scenes>
     <resources>
